<resources>
    <string name="app_name">Musico</string>
    <string name="now_playing">Now Playing</string>

    <string name="cheap_thrills">Cheap Thrills</string>
    <string name="come_get_it">Come and Get it</string>
    <string name="despacito">Despacito</string>
    <string name="diamonds">Diamonds</string>
    <string name="dream">Dream</string>
    <string name="one_more_night">One more night</string>
    <string name="see_you_again">See you again</string>
    <string name="shape_of_you">Shape of you</string>
    <string name="side_to_side">Side to side</string>
    <string name="this_is_what_you_came_for">This is what you came for</string>
    <string name="all_of_the_stars">All of the stars</string>
    <string name="heart_wants_what_it_wants">Heart wants what it wants</string>
    <string name="perfect">Perfect</string>
    <string name="give_me_love">Give me love</string>

    <string name="sia">Sia</string>
    <string name="selena_gomez">Selena Gomez</string>
    <string name="luis_fonsi">Luis Fonsi</string>
    <string name="rihanna">Rihanna</string>
    <string name="imagine_dragons">Imagine Dragons</string>
    <string name="maroon_5">Maroon 5</string>
    <string name="wiz_khalifa">Wiz Khalifa</string>
    <string name="ed_sheeran">Ed Sheeran</string>
    <string name="ariana_grande">Ariana Grande</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="exit_confirm">Press back again to exit</string>
    <string name="initial_time">0:00</string>
    <string name="play_next">Play Next</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="view_album">View Album</string>
    <string name="view_details">View Details</string>
    <string name="first_song">This is the first song</string>
    <string name="content_description">No description found</string>
    <string name="divider">/</string>
    <string name="play">Play</string>
    <string name="no_favorites">No favorites added yet..</string>

    <string name="songs">Songs</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="favorites">Favorites</string>
    <string name="explore">Explore</string>
    <string name="search">Search</string>
    <string name="login">Login</string>
    <string name="server_client_id">712778464038-ugq1js22esqsk3ll5bubgisrcj39jtrd.apps.googleusercontent.com</string>
</resources>
