<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/album_image"
        android:layout_width="@dimen/dimen_80dp"
        android:layout_height="@dimen/dimen_80dp"
        android:layout_marginLeft="@dimen/dimen_8dp"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:contentDescription="@string/content_description"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/play_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_8dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginLeft="@dimen/dimen_8dp"
        android:layout_marginRight="@dimen/dimen_16dp"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:drawableLeft="@drawable/ic_skip_next"
        android:drawablePadding="@dimen/dimen_8dp"
        android:drawableStart="@drawable/ic_skip_next"
        android:drawableTint="@android:color/black"
        android:text="@string/play_next"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/add_to_playlist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/album_image" />

    <TextView
        android:id="@+id/add_to_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_8dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginLeft="@dimen/dimen_8dp"
        android:layout_marginRight="@dimen/dimen_16dp"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:drawableLeft="@drawable/ic_format_list_bulleted"
        android:drawablePadding="@dimen/dimen_8dp"
        android:drawableStart="@drawable/ic_format_list_bulleted"
        android:drawableTint="@android:color/black"
        android:text="@string/add_to_playlist"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/view_album"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play_next" />

    <TextView
        android:id="@+id/view_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_8dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginLeft="@dimen/dimen_8dp"
        android:layout_marginRight="@dimen/dimen_16dp"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:drawableLeft="@drawable/ic_album"
        android:drawablePadding="@dimen/dimen_8dp"
        android:drawableStart="@drawable/ic_album"
        android:text="@string/view_album"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/view_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_to_playlist" />

    <TextView
        android:id="@+id/view_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginLeft="@dimen/dimen_8dp"
        android:layout_marginRight="@dimen/dimen_16dp"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:drawableLeft="@drawable/ic_remove_red_eye"
        android:drawablePadding="@dimen/dimen_8dp"
        android:drawableStart="@drawable/ic_remove_red_eye"
        android:text="@string/view_details"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_album" />

    <TextView
        android:id="@+id/song_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_8dp"
        android:layout_marginLeft="@dimen/dimen_16dp"
        android:layout_marginRight="@dimen/dimen_8dp"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/artist_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/album_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Song Name" />

    <TextView
        android:id="@+id/artist_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_8dp"
        android:layout_marginEnd="@dimen/dimen_8dp"
        android:layout_marginLeft="@dimen/dimen_16dp"
        android:layout_marginRight="@dimen/dimen_8dp"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:textAppearance="?android:textAppearanceMedium"
        app:layout_constraintBottom_toBottomOf="@+id/album_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/album_image"
        app:layout_constraintTop_toBottomOf="@+id/song_name"
        tools:text="Artist Name" />

</android.support.constraint.ConstraintLayout>